--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -14,6 +14,9 @@
                 top: 0px;
             }
         }
+        .sidebar-page {
+            left: 70px;
+        }
     }
     
     .collapse-group {
@@ -49,7 +52,7 @@
     #logo {
         color: white;
         text-align: center;
-        margin: 10px 0px 60px 0px;
+        margin: 10px 0px 20px 0px;
     }
     
     .sidebar {
